# school-sync

./: .env.example  README.md  pyproject.toml
school_sync/: config.py  drive.py  main.py  models.py  state.py
school_sync/sources/: brightspace.py  gradescope.py
school_sync/targets/: notion.py
