[project]
name = "school-sync"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "gradescopeapi @ git+https://github.com/nyuoss/gradescope-api",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.0",
]

[project.scripts]
school-sync = "school_sync.main:main"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
